--- a/starkov.Faker/starkov.Faker.Shared/Module.resx
+++ b/starkov.Faker/starkov.Faker.Shared/Module.resx
@@ -74,4 +74,28 @@
     <value>The entity generation process has completed its work.
 More details are sent in the notification.</value>
   </data>
+  <data name="LocalizedPassword" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="ErrorText_SetValToProperty" xml:space="preserve">
+    <value>Error caused by setting value to property {0}:
+- {1}</value>
+  </data>
+  <data name="InfoText_FirstEntryID" xml:space="preserve">
+    <value>First entry ID: {0}</value>
+  </data>
+  <data name="InfoText_TimeSpentToCreatEntities" xml:space="preserve">
+    <value>{0}Time spent creating entities: {1}</value>
+  </data>
+  <data name="InfoText_Errors" xml:space="preserve">
+    <value>
+   Errors:
+{0}</value>
+  </data>
+  <data name="NoticeSubject" xml:space="preserve">
+    <value>Created {0} from {1} entities of type {2}</value>
+  </data>
+  <data name="DialogError_RecordCountLessThanOne" xml:space="preserve">
+    <value>The number of records to be created cannot be less than 1</value>
+  </data>
 </root>
